@@ -1,4 +1,9 @@
-2011-05-23 Borut Razem <borut.razem AT gmail.net>
+2011-05-29 Borut Razem <borut.razem AT gmail.net>
+
+	* download_regtests_db.php: added regtest form
+	* styles/*, scripts/*, images/timespan.png: added
+
+22011-05-23 Borut Razem <borut.razem AT gmail.net>
 
 	* download_regtests_db.php: added where parameter
 
